--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,12 @@
 [env:esp32-c3-devkitm-1]
-platform = https://github.com/platformio/platform-espressif32/releases/download/platform-6.7.0/platform-espressif32-6.7.0.zip
+platform = espressif32@6.8.1
 board = esp32-c3-devkitm-1
 framework = espidf
 monitor_speed = 115200
 
+; Manual libwebsockets (git works reliably)
 lib_deps = 
-    https://github.com/warmcat/libwebsockets.git#v4.3.3
+    https://github.com/espressif/esp-libwebsockets.git
 
 build_flags = 
     -DLWSD_EMBEDDED=1
@@ -13,6 +14,13 @@ build_flags =
     -DLWS_WITH_LHP=1
     -DLWS_WITH_HTTP2=1
     -DLWS_WITH_CLIENT=1
-    -DCONFIG_LWIP_MAX_SOCKETS=12
+    -DLWS_IPV6=0
+    -DLWS_WITH_SERVER=0
+    -DLWS_WITHOUT_SERVER=1
+    -DLWS_WITH_TLS=0
 
-board_build.partitions = default_8MB.csv
+board_build.filesystem = littlefs
+board_build.partitions = app4M_noota.csv
+board_build.mcu = esp32c3
+board_build.f_flash = 80000000L
+board_build.flash_mode = dio
